[package]
name = "denqlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_bindgen = "0.5.1"
serde = { version = "1.0.137", features = ["derive"] }
rusqlite = { version = "0.27.0" }
once_cell = "1.12.0"
serde_json = "1.0.81"

[lib]
crate-type = ["cdylib"]
